--- a/expe.tex
+++ b/expe.tex
@@ -1,4 +1,4 @@
-\section{Empirical results}
+\section{Experimental study}
 
 To validate our theoretical results we fitted our models on synthetic networks and track how well we can reproduce the properties of interest on a generated network.
 
