--- a/img/ilfrm2.tex
+++ b/img/ilfrm2.tex
@@ -1,10 +1,10 @@
 \begin{tikzpicture}
   % Define nodes
   \node[obs]                      (y) {$y_{ij}$};
-  \node[latent, left=1.2cm of y] (fi) {$F_i$};
-  \node[latent, right=1.2cm of y] (fj) {$F_j$};
-  \node[latent, above= of y]    (ibp) {$\Theta$};;
-  \node[latent, below= of y, yshift=-0.3cm]   (W) {$\Phi$};
+  \node[latent, left=1.2cm of y] (fi) {$\mat{f}_i$};
+  \node[latent, right=1.2cm of y] (fj) {$\mat{f}_j$};
+  \node[latent, above= of y]    (ibp) {$\mat{F}$};;
+  \node[latent, below= of y, yshift=-0.3cm]   (W) {$\mat{\Phi}$};
   \node[const, left=0.7cm of ibp]   (a) {$\alpha$};
   \node[const, right=0.7cm of W]   (sw) {$\sigma_w$};
 
