--- a/appendix.tex
+++ b/appendix.tex
@@ -1,10 +1,11 @@
 \section{Appendix}
+\label{sec:append}
 
-\subsection{Gibbs update for IMMSB}
+\subsection{Collapsed Gibbs sampling updates for IMMSB}
 
-We provide here the derivation of the Gibbs update rules given in Section~\ref{sec:models} for IMMSB.
+We provide here the derivation of the updates of the IMMSB model, described in Section~\ref{sec:models}.
 
-From the definition of the model, one has: $\pr(z_{ij} = k \mid \mat{f}_i) = f_{ik}$.
+%From the definition of the model, one has: $\pr(z_{ij} = k \mid \mat{f}_i) = f_{ik}$.
 
-\textcolor{red}{Adrien, peux-tu donner la d\'erivation ?; la forme actuelle n'est valable que pour MMSB.} 
+\textcolor{red}{Adrien, peux-tu donner la d\'erivation ? La forme actuelle n'est valable que pour MMSB.} 
 
