--- a/img/mmsb2.tex
+++ b/img/mmsb2.tex
@@ -8,8 +8,8 @@
   \node[latent, below= of y, yshift=-0.3cm]   (W) {$\mat{\Phi}$};
   \node[const, left=0.7cm of ibp]   (a) {$\alpha_0$};
   \node[latent, right=0.7cm of ibp]   (b) {$\mat{\beta}$};
-  \node[const, above=of b, , yshift=-0.5cm]   (g) {$\gamma$};
-  \node[const, right=0.7cm of W]   (sw) {$\lambda$};
+  \node[const, above=of b, , yshift=-0.1cm]   (g) {$\gamma$};
+  \node[const, right=0.7cm of W]   (sw) {($\lambda_0,\lambda_1$)};
 
   % Connect the nodes
   \edge {zi,zj,W} {y} ;
