--- a/main.tex
+++ b/main.tex
@@ -73,8 +73,12 @@ Burstiness, preferential attachment, Assortativity, community detection, link pr
 \input{expe.tex}
 \input{sup.tex}
 
-\bibliographystyle{unsrt}
-\bibliography{./a}
+\clearpage
+
+\input{table.tex}
+
+%\bibliographystyle{unsrt}
+%\bibliography{./a}
 
 \end{document}
 
