--- a/img/mmsb2.tex
+++ b/img/mmsb2.tex
@@ -1,4 +1,5 @@
 \begin{tikzpicture}
+    %\begin{scope}[yshift=0.5cm]
   % Define nodes
   \node[obs]                      (y) {$y_{ij}$};
   \node[latent, left=1.2cm of y] (zi) {$z_{i\rightarrow j}$};
@@ -6,14 +7,18 @@
   \node[latent, above= of y]    (ibp) {$\Theta$};;
   \node[latent, below= of y, yshift=-0.3cm]   (W) {$\Phi$};
   \node[const, left=0.7cm of ibp]   (a) {$\alpha_0$};
+  \node[latent, right=0.7cm of ibp]   (b) {$\beta$};
+  \node[const, above=of b, , yshift=-0.5cm]   (g) {$\gamma$};
   \node[const, right=0.7cm of W]   (sw) {$\lambda$};
 
   % Connect the nodes
   \edge {zi,zj,W} {y} ;
   \edge {ibp} {zi,zj} ;
   \edge {sw} {W} ; 
-  \edge {a} {ibp} ; 
+  \edge {a,b} {ibp} ; 
+  \edge {g} {b};
 
   % Plates
   \plate {yx} {(zj)(zi)(y)} {$N\times N$} ;
+  %\end{scope}
 \end{tikzpicture}
