+bib + old_main.pdf

--- a/main.tex
+++ b/main.tex
@@ -75,10 +75,8 @@
 
 \clearpage
 
-\input{table.tex}
-
-%\bibliographystyle{unsrt}
-%\bibliography{./a}
+\bibliographystyle{unsrt}
+\bibliography{./a}
 
 \appendix
 \input{appendix}
