expe v01 + bib change

--- a/a.bib
+++ b/a.bib
@@ -267,3 +267,24 @@ publisher={JSTOR}
     year={2014},
     publisher={CRC Press}
 }
+@article{largeron2015,
+    author = {Largeron, Christine AND Mougel, Pierre-Nicolas AND Rabbany, Reihaneh AND Za{\"\i}ane, Osmar R.},
+    journal = {PLoS ONE},
+    publisher = {Public Library of Science},
+    title = {{Generating Attributed Networks with Communities}},
+    year = {2015},
+    month = {04},
+    volume = {10},
+    url = {http://dx.doi.org/10.1371%2Fjournal.pone.0122777},
+    pages = {e0122777},
+    number = {4},
+    doi = {10.1371/journal.pone.0122777}
+}        
+@inbook{Easley2010,
+  author = {Easley, David and Kleinberg, Jon},
+  year = 2010,
+  title = {{Networks, Crowds and Markets: Reasoning about a Highly Connected World}},
+  chapter = {4. Networks in their Surrounding Contexts},
+  publisher = {Cambridge University Press}
+}
+
